--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-*{
+* {
   box-sizing: border-box;
 }
-body{
+body {
   background-color: #0095dd;
   display: flex;
   flex-direction: column;
@@ -11,50 +11,59 @@ body{
   min-height: 100vh;
   margin: 0;
 }
-h1{
+
+h1 {
   font-size: 45px;
-  color: #ffffff;
+  color: #fff;
 }
-canvas{
-  background-color: #f0f0f0;
+
+canvas {
+  background: #f0f0f0;
   display: block;
   border-radius: 5px;
 }
-.btn{
+
+.btn {
   cursor: pointer;
   border: 0;
   padding: 10px 20px;
-  background-color: #000000;
-  color: #ffffff;
-  border-radius: 5px;  
+  background: #000;
+  color: #fff;
+  border-radius: 5px;
 }
-.btn:focus{
+
+.btn:focus {
   outline: 0;
 }
-.btn:hover{
-  background-color: #222222;
+
+.btn:hover {
+  background: #222;
 }
-.btn:active{
+
+.btn:active {
   transform: scale(0.98);
 }
-.rules-btn{
+
+.rules-btn {
   position: absolute;
   top: 30px;
   left: 30px;
 }
-.rules{
+
+.rules {
   position: absolute;
   top: 0;
   left: 0;
-  background-color: #333333;
-  color: #ffffff;
+  background: #333;
+  color: #fff;
   min-height: 100vh;
   width: 400px;
   padding: 20px;
   line-height: 1.5;
-  transform: translateX(-400PX);
-  transition: all 0.3s ease-in;
+  transform: translateX(-400px);
+  transition: transform 1s ease-in-out;
 }
-.rules.show{
+
+.rules.show {
   transform: translateX(0);
 }
